Bug Fix: 3 video cards not centered vertically on media page, add justify-content: center; to .video-cards CSS class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,13 +251,14 @@ h6 {
   height: auto;
   width: 100%;
   border-radius: 10px;
-  align-content: center;
 }
 
 /* Video card conatiner */
 .video-cards {
   display: grid;
   grid-gap: 1rem;
+  justify-content: center;
+  
 }
 
 
